# z-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/z_bench/: __init__.py  cli.py  core.py
